--- a/sass/style.scss
+++ b/sass/style.scss
@@ -146,3 +146,30 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+.tags {
+  li {
+    display: inline-block;
+    width: 100%;
+  }
+
+  .tag-size-1 {
+    font-size: 90%;
+  }
+
+  .tag-size-2 {
+    font-size: 100%;
+  }
+
+  .tag-size-3 {
+    font-size: 110%;
+  }
+
+  .tag-size-4 {
+    font-size: 130%;
+  }
+
+  .tag-size-5 {
+    font-size: 150%;
+  }
+}
